# clf

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  compile.cmd
crates/config/: Cargo.toml
crates/config/src/: callback.rs  config.rs  lib.rs  pattern.rs  variables.rs
crates/config/tests/: check_ut.py  config1.yml
crates/logfile/: Cargo.toml
crates/logfile/_tests/: config.rs  tests.rs
crates/logfile/_tests/assets/: echo.lst
crates/logfile/src/: lib.rs  logfile.rs  snapshot.rs
crates/misc/: Cargo.toml
crates/misc/src/: error.rs  nagios.rs  util.rs
crates/rclf/: Cargo.toml
crates/rclf/_tests/: seeker.rs
crates/rclf/src/: callback.rs  command.rs  config.rs  error.rs  lib.rs  logfile.rs  lookup.rs  nagios.rs  pattern.rs  snapshot.rs  util.rs  variables.rs
crates/rclf/test/: command.rs  config.rs  tests.rs
crates/rclf/test/assets/: config.yml  ls.sh
crates/rclf/tests/: callback.rs  command.rs  config.rs  seeker.rs  tests.rs
examples/: clf.sh
examples/callbacks/: echodomain.py  echotcp.py  kill.py
examples/config/: domain.yml  domain_large.yml  fancy.yml  full.yml  script.yml  tcp.yml  tera.yml
examples/config/windows/: tcpwin.yml
examples/rework/: accesslog_linux.yml
examples/scripts/: echodomain.py  echotcp.py  echovars.py
scripts/: clf.sh  package.sh  setdllpath.cmd
src/: args.rs  bufreader.rs  clf.rs  config.rs  error.rs  file_iter.rs  init.rs  integration_test.rs  lib.rs  logfile.rs  lookup.rs  main.rs  pattern.rs  reader.rs  relist.rs  scan.rs  search.rs  serdeser.rs  settings.rs  snapshot.rs  toto.rs  uncompress.rs  util.rs
src/config/: archive.rs  callback.rs  config.rs  global.rs  logfiledef.rs  logsource.rs  mod.rs  options.rs  pattern.rs  script.rs  search.rs  tag.rs  variables.rs  vars.rs
src/configuration/: archive.rs  callback.rs  config.rs  global.rs  logfiledef.rs  logsource.rs  mod.rs  options.rs  pattern.rs  script.rs  search.rs  tag.rs  vars.rs
src/logfile/: compression.rs  logfile.rs  logfileerror.rs  logfileid.rs  logqueue.rs  logreader.rs  lookup.rs  mod.rs  rundata.rs  seeker.rs  signature.rs  snapshot.rs
src/misc/: constants.rs  error.rs  extension.rs  macros.rs  mod.rs  nagios.rs  util.rs
src/testing/: data.rs  mod.rs  setup.rs
src/windows/: dllmain.cpp  libsignature.cpp  signature.lib
tests/: test_list.md
tests/assets/: notify.py
tests/config/: accesslog_linux.yml  accesslog_simple.yml  accesslog_windows.yml  config.yml  config1.yml  kernlog.yml  kernlog_loglist.yml  large_accesslog.yml  notfound.yml  small_access.yml  tcp.yml  test.yml  test01.yml  test02.yml  test1.yml  test2.yml  tmplog.yml
tests/examples/config/: access_simple.yml  fancy.yml  syslog.yml
tests/integration/: echodomain.rs  echotcp.rs  echovars.rs  integration_test.rs  runtests.py  testcase.py  testcase.rs
tests/integration/callbacks/: create_file.pl  echodomain.py  echotcp.py  echovars.py  echovars.rb  kill.py  terminate.py
tests/integration/config/: accesslog_simple.yml  bad_syntax.yml  default.yml  domain.yml  echodomain.yml  echotcp.yml  echotcp_win.yml  exclude.yml  full.yml  generated.yml  integration.yml  list_cmd.yml  list_linux.yml  ok.yml  ok_pattern.yml  prescript.yml  script.yml  small_access.yml  tc3.yml  tc4.yml  tc6.yml  tc7.yml  tcp.yml  template.yml  tera.yml  tmplog.yml  utf8.yml
tests/integration/linux/: clf_snapshot.json  syslog.py  syslog.sh  syslog.yml  syslog.yml.orig
tests/integration/logfiles/: adhoc.txt  generate.py
tests/integration/ruby/: tc.rb  tc.yaml  testcase.rb
tests/integration/scripts/: create_file.pl  echodomain.py  echotcp.py  echovars.py  generate.py  kill.py  terminate.py
tests/local/: clf_snapshot.json  syslog.sh  syslog.yml
tests/logfiles/: simple.txt
tests/scripts/: echodomain.py  echotcp.py  echotcp.rb  echovars.py  foo  notify.py
tests/src/: macros.rs  status.rs  tests.rs  util.rs
tests/unittest/: callback_script.py  list_files.log.1  list_files.log.10  list_files.log.2  list_files.log.3  list_files.log.4  list_files.log.5  list_files.log.6  list_files.log.7  list_files.log.8  list_files.log.9
(+6 files in other folders)
