[package]
name = "clf"
version = "0.1.0"
authors = ["Dan DiVica <dandyvica@gmail.com>"]
edition = "2018"

[lib]
name = "clf"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
simplelog = "^0.7.6"
wait-timeout = "0.2.0"
regex = "1.3.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.51"
log = "0.4.8"
flate2 = "1.0.14"
serde_yaml = "0.8.14"


[[bin]]
name = "clf"
path = "src/clf.rs"

# [[test]]
# name = "integration"
# path = "tests/src/tests.rs"
