[package]
name = "clf"
version = "0.1.0"
authors = ["dandyvica <dandyvica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
simplelog = "^0.7.6"
wait-timeout = "0.2.0"
regex = "^1.3.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.51"
log = "0.4.8"
flate2 = "1.0.19"
serde_yaml = "0.8.14"
bzip2 = "0.4.1"
xz2 = "0.1.6"
chrono = "0.4.19"
hostname = "^0.3.1"
whoami = "1.0.3"
rand = "0.8.2"

# necessary for managing UTF16 LPWCSTR Windows strings
[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"

# main binary
[[bin]]
name = "clf"
path = "src/clf.rs"

[dependencies.tera]
version = "^1.5.0"
optional = true

[features]
default = ["tera"]

# run this executable to run all intergations tests
[[bin]]
name = "integration_test"
path = "tests/integration/integration_test.rs"


