[package]
name = "clf"
version = "0.9.0"
authors = ["Alain Viguier <dandyvica@gmail.com>"]
edition = "2018"
description = """
clf is a reimplementation of the check_logfiles NAgios plugin
"""
license = "MIT"
documentation = "https://github.com/dandyvica/clf"
homepage = "https://github.com/dandyvica/clf"
readme = "README.md"
keywords = ["nagios", "logfiles" ]
categories = ["command-line-utilities", "text-processing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
simplelog = "^0.9.0"
wait-timeout = "0.2.0"
regex = "^1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
log = "0.4.14"
flate2 = "1.0.19"
serde_yaml = "0.8.15"
bzip2 = "0.4.1"
xz2 = "0.1.6"
chrono = "0.4.19"
hostname = "^0.3.1"
whoami = "1.1.0"
rand = "0.8.3"
crc = "1.8.1"

# necessary for managing UTF16 LPWCSTR Windows strings
[target.'cfg(windows)'.dependencies]
widestring = "0.4.3"

# main binary
[[bin]]
name = "clf"
path = "src/clf.rs"

[dependencies.tera]
version = "^1.6.1"
optional = true

[features]
default = ["tera"]

# run this executable to run all intergations tests
[[bin]]
name = "integration_test"
path = "tests/integration/integration_test.rs"


