[package]
name = "logfile"
version = "0.1.0"
description = "Reimplementation of the Nagios check_logfiles plugin in Rust"
authors = ["Dan DiVica <dandyvica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0.51"
flate2 = "1.0.14"
wait-timeout = "0.2.0"
log = "0.4.8"
simplelog = "^0.7.6"
misc = { version = "0.1.0", path = "../misc" }
config = { version = "0.1.0", path = "../config" }
#hostname = "0.3.1"
#pcre2 = "0.2.3"

# [[test]]
# name = "integration"
# path = "test/tests.rs"

