[package]
name = "misc"
version = "0.1.0"
description = "Reimplementation of the Nagios check_logfiles plugin in Rust"
authors = ["Dan DiVica <dandyvica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0.51"

# [[test]]
# name = "integration"
# path = "test/tests.rs"

